# activation-model-scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  multi-approvers.yml
.kokoro/: build.cfg  build.sh  release.cfg
.kokoro/requirements/: build.in  build.txt
docs/: CONTRIBUTING.md  CUSTOM_CONCEPTS.md
examples/: basic_usage.py  cicd_integration.py  github-actions.yml
src/ams/: __init__.py  cli.py  concepts.py  extractor.py  scanner.py
tests/: __init__.py  test_cli.py  test_core.py  test_extractor.py  test_smoke.py
